test/sema/typeck/class/object-field-without-self-write.dora
class Foo{a: Int32} impl Foo { fn set(_x: Int32) { a = x; } }
